--- a/components/mapa.html
+++ b/components/mapa.html
@@ -1,11 +1,11 @@
 <section id="ubicacion" class="mapa">
-    <h2>Encuéntranos en:</h2>
+    <h2>Estamos ubicados en:</h2>
     <div id="mapa"></div>
 
 <!-- insertar iframe -->
 <iframe
-  src="https://files.catbox.moe/30zllv.webp"
-  width="400"
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104484.49041657001!2d-58.79791366109941!3d-34.506657698166755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc980266ee82a7%3A0x35523670a8130176!2sUniversidad%20Nacional%20de%20Jos%C3%A9%20C.%20Paz%20(UNPAZ)!5e0!3m2!1ses-419!2sar!4v1762467211384!5m2!1ses-419!2sar"
+  width="70%"
   height="250"
   style="border:none;overflow:hidden;display:block;margin:0 auto;">
 </iframe>
