agregue una foto para usar de fondo en el footer y el nombre de la consultora

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,8 +1,7 @@
 <footer class="footer">
-    <p>Web Development © 2025 - Seguinos en:  
-      <a href="" target="_blank" class="instagram-icon">
-        <i class="fab fa-instagram"></i>
-    </p>
-    
-  </a>
+    <p>Consul_tteam © 2025 - Seguinos en:  
+      <a href="https://www.instagram.com/stories/perfumeriaemanue/" target="_blank" class="instagram-icon">
+        <i class="fab fa-instagram"></i> </a>
+      </p>
+  
   </footer>
