agregue el link hacia el instagram creado de la consultora

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <p>Consul_tteam © 2025 - Seguinos en:  
-      <a href="https://www.instagram.com/stories/perfumeriaemanue/" target="_blank" class="instagram-icon">
+      <a href="https://instagram.com/consulteam88//" target="_blank" class="instagram-icon">
         <i class="fab fa-instagram"></i> </a>
       </p>
   
