--- a/components/banner.html
+++ b/components/banner.html
@@ -1,2 +1,2 @@
 <!-- Banner -->
-<img src="images/consultora.jpeg" alt="banner" class="consultora-banner">
+<img src="images/consultorag1.jpeg" alt="banner" class="consultora-banner">
