--- a/css/banner.css
+++ b/css/banner.css
@@ -1,9 +1,10 @@
 /* Banner */
-.banner {
+.consultora-banner {
 
 	width: 100%;
     max-height: 550px;
 	color: white;
-	padding: 2em;
+	padding: 5%;
 	text-align: center;
+	margin: auto;
   }
