--- a/components/nosotros.html
+++ b/components/nosotros.html
@@ -3,37 +3,37 @@
 
 <!-- Principal -->
 <div class="contenido">
-  <h1>Nosotros somos [.....]</h1>
-  <h2>Nuestro proyecto [.....]</h2>
+  <h1>Nosotros somos profesionales egresados de la Tecnicatura en comercio electrónico de la Universidad Nacional de José C. Paz</h1>
+  <h2>Nuestro proyecto comenzó luego de haber cursado varias materias en común y tiene como base valores de comunidad y crecimiento continuo, sabiendo que cada día se puede aprender algo nuevo.</h2>
   <br>
-  <h3>Nuestra misión [.....]</h3>
+  <h3>Nuestra misión como consultora es ser colaborativos con distintas marcas locales, emprendedores y Pymes.</h3>
 </div>
 
 <!-- Integrantes -->
 <div class="galeria">
   <div class="integrante">
-    <img src="images/perfil1.webp" alt="nombre apellido" class="perfil">
-    <p class="nombre">Nombre Apellido</p>
-    <p class="descripcion">Descripción de función en el grupo.</p>
+    <img src="/images/valendiaz.jpeg" alt="nombre apellido" class="perfil">
+    <p class="nombre">Valentina Diaz</p>
+    <p class="descripcion">UX/UI.</p>
   </div>
   <div class="integrante">
-    <img src="images/perfil1.webp" alt="nombre apellido" class="perfil">
-    <p class="nombre">Nombre Apellido</p>
-    <p class="descripcion">Descripción de función en el grupo.</p>
+    <img src="/images/matiassanagua.jpeg" alt="nombre apellido" class="perfil">
+    <p class="nombre">Matias Sanagua</p>
+    <p class="descripcion">Contador.</p>
   </div>
   <div class="integrante">
-    <img src="images/perfil1.webp" alt="nombre apellido de" class="perfil">
-    <p class="nombre">Nombre Apellido</p>
-    <p class="descripcion">Descripción de función en el grupo.</p>
+    <img src="/images/leilarivero.jpeg" alt="nombre apellido de" class="perfil">
+    <p class="nombre">Leila Joanna Rivero</p>
+    <p class="descripcion">Marketing Digital.</p>
   </div>
   <div class="integrante">
-    <img src="images/perfil1.webp" alt="nombre apellido" class="perfil">
-    <p class="nombre">Nombre Apellido</p>
-    <p class="descripcion">Descripción de función en el grupo.</p>
+    <img src="/images/gabrielsaucedo.jpeg" alt="nombre apellido" class="perfil">
+    <p class="nombre">Angel Gabriel Saucedo</p>
+    <p class="descripcion">Ingeniero en sistemas.</p>
   </div>
   <div class="integrante">
-    <img src="images/perfil1.webp" alt="nombre apellido" class="perfil">
-    <p class="nombre">Nombre Apellido</p>
-    <p class="descripcion">Descripción de función en el grupo.</p>
+    <img src="/images/waltergomez.jpeg" alt="nombre apellido" class="perfil">
+    <p class="nombre">Walter David Gomez</p>
+    <p class="descripcion">Community Manager.</p>
   </div>
 </div>
