--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,6 +1,9 @@
  /* Formulario */
  .contacto {
-	margin: 5%;
+	background-image: url("../images/footer.jpeg");
+	background-position: center;
+	justify-content: center;
+
  }
  .contacto-form {
 	display: flex;
@@ -19,5 +22,6 @@
 	display: flex;
 	flex-direction: column;
 	max-width: 400px;
-	margin: 20px;
+	margin:0 20px ;
+	padding-bottom: 1em;
   }
