cambiando header y nav

--- a/components/header.html
+++ b/components/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <h1>Web development</h1>
+    <h1>ConsulTeam!</h1>
     <nav>
       <ul>
         <li><a href="#nosotros">Nosotros</a></li>
