--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 /* Header */
 .header {
-	background-color: black;
-	color: white;
+	background-color: rgb(12, 0, 88);
+	color: #f2f2f2;
 	padding: 1em;
 	text-align: center;
   }
@@ -10,7 +10,14 @@
 	list-style: none;
 	padding: 0;
   }
-  
+  .header nav ul li a {
+	color: #f2f2f2;
+	border-bottom: solid black 1px;
+  }
+  .header nav ul li a:hover {
+	font-size: 105%;
+	color: #d68a8a;
+  }
   .header nav ul li {
 	display: inline;
 	margin-right: 1em;
