modifique espaciado de informacion sobre nosotros

--- a/components/nosotros.html
+++ b/components/nosotros.html
@@ -1,7 +1,7 @@
 <!-- Principal -->
 <div class="contenido">
   <h1>Nosotros somos profesionales egresados de la Tecnicatura en comercio electrónico de la Universidad Nacional de José C. Paz</h1>
-  <h2>Nuestro proyecto comenzó luego de haber cursado varias materias en común y tiene como base valores de comunidad y crecimiento continuo, sabiendo que cada día se puede aprender algo nuevo.</h2>
+  <h2 class="h2">Nuestro proyecto comenzó luego de haber cursado varias materias en común y tiene como base valores de comunidad y crecimiento continuo, sabiendo que cada día se puede aprender algo nuevo.</h2>
   <br>
   <h3>Nuestra misión como consultora es ser colaborativos con distintas marcas locales, emprendedores y Pymes.</h3>
 </div>
