--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
   /* Footer */
   .footer {
-	background-color: black;
+	background-color: rgb(12, 0, 88)
 	color: white;
 	text-align: center;
 	padding: 1em;
