modifique el espaciado de contacto

--- a/components/contacto.html
+++ b/components/contacto.html
@@ -1,7 +1,7 @@
 <!-- Formulario de contacto -->
 <!-- Falta agregar datos como apellido y un nro de telefono al formulario --> 
  <section id="contacto" class="contacto">
-    <h2>Contacto</h2>
+    <h2 class="contacto-h2">Contacto</h2>
     <form class="contacto-form" action="https://formspree.io/f/xdkpqbrk"
     method="POST">
 
